2003-04-19  Miguel de Icaza  <miguel@ximian.com>

	* cs-parser.jay: A namespace also introduces a DeclarationFound.
	Fixes #41591

2003-04-18  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs (GetReferenceType, GetPointerType): In .NET each
	invocation to ModuleBuilder.GetType with the same values will
	return a new type instance, so we need to cache its return
	values. 

	* expression.cs (Binary.ResolveOperator): Only allow the compare
	operators on enums if they are of the same type.

	* ecore.cs (Expression.ImplicitReferenceConversion): handle target
	types of ValueType on their own case.  Before we were giving them
	the same treatment as objects.

	* decl.cs (DeclSpace.IsValid): IsValid takes the short name and
	fullname.  Short name is used to compare against container name.
	Fullname is used to check against defined namespace names.
	
	* class.cs (AddProperty, AddField, AddClass, AddStruct, AddEnum,
	AddDelegate, AddEvent): Pass new parameter to DeclSpace.IsValid

	(Method.CheckBase): Call parent.
	(MemberBase.CheckBase): Check for protected members on sealed
	classes.
	(PropertyBase.CheckBase): Call parent.
	(Field.Define): Call parent.

	* report.cs: Negative error codes are now mapped to 8000 - code,
	so that the display is render more nicely.

	* typemanager.cs: Do not use try/catch, instead report a regular
	error. 

	(GetPointerType, GetReferenceType): These methods provide
	mechanisms to obtain the T* and T& from a T.  We had the code
	previously scattered around the code base, and it also used
	TypeManager.LookupType that would go through plenty of caches.
	This one goes directly to the type source.

	In some places we did the Type.GetType followed by
	ModuleBuilder.GetType, but not in others, so this unifies the
	processing as well.

	* namespace.cs (VerifyUsing): Perform a non-lazy approach to using
	statements now that we have namespace information.

	* typemanager.cs (IsNamespace): New method, returns whether the