@@ -1,5 +1,8 @@
 2003-04-19  Miguel de Icaza  <miguel@ximian.com>
 
+	* typemanager.cs: Add intermediate namespaces (if a namespace A.B
+	is created, we create the A namespace).
+
 	* cs-parser.jay: A namespace also introduces a DeclarationFound.
 	Fixes #41591
 
